Cosmetic changes to optimise table readability, quick fix for anchor links not render in Markdown-in-HTML

--- a/css/_sass/_component-code.scss
+++ b/css/_sass/_component-code.scss
@@ -14,7 +14,7 @@ table code {
 .hljs {
 	display: block;
 	overflow-x: auto;
-	margin-bottom: 2em;
+	margin-bottom: 3em;
 	padding: 1em;
 	background: $color-gray-7;
 }
